css/style.css
/* ... */
/* Media for medium phones (481px - 820px) */
@media only screen and (min-width: 481px) and (max-width: 820px) {
  .top-section {
    height: 400px;
  }

  .logo-slogan p:first-child {
    font-size: 15px;
  }

  .logo-slogan p {
    font-size: 9px;
  }

  .header {
    padding: 12px 18px;
  }

  .logo {
    height: 38px;
  }

  .mobile-menu-list li a {
    font-size: 20px;
  }

  .mobile-menu-list li.arrow::after {
    font-size: 30px;
  }

  .cart-icon {
    font-size: 20px;
  }

  .link-icon {
    font-size: 20px;
  }

  .mail-icon {
    margin-left: 18px;
    font-size: 20px;
  }

  .mobile-hamburger-icons .mobile-icon img {
    width: 40px;
    height: 40px;
  }

  .mobile-hamburger-icons {
    gap: 50px;
  }

  .text-left {
    left: 30px;
    font-size: 22px;
    line-height: 33px;
  }

  .flower-container {
    width: 280px;
    height: 80vh;
  }

  .card-slider-container {
    max-width: 600px;
    height: 110px;
  }

  .card-slider {
    border-radius: 7px;
  }

  .text-section {
    padding: 18px;
  }

  .text-section p {
    font-size: 13px;
    line-height: 20px;
  }

  .view-more {
    width: 160px;
    height: 34px;
    font-size: 13px;
  }

  .play-icon {
    font-size: 22px;
    right: 9px;
  }

  .dots-container {
    top: -22px;
    gap: 12px;
  }

  .dot {
    width: 7px;
    height: 7px;
  }

  .event-new-section {
    height: 300px;
  }

  .about-block .about-text p {
    width: 70%;
    text-align: justify;
    display: flex;
    margin: 0px auto;
    padding-top: 20px;
  }

  .service-flower-block {
    gap: 0px;
  }

  .mobile-service h3 {
    margin-bottom: 30px;
  }

  .service-introduce {
    padding: 40px 35px;
  }

  .service-sentence p {
    width: 90%;
    display: flex;
    margin: 30px auto;
  }

  .service-button-detail a {
    width: 90%;
    height: 70px;
  }

  .web-content p {
    font-size: 20px;
  }

  .web-content img {
    height: 20px;
    width: auto;
  }

  .footer-mobile-main .cart-icon,
  .footer-mobile-main .link-icon,
  .footer-mobile-main .mail-icon {
    font-size: 20px;
  }
}

/* Media for ipads in portrait (width <= 820px) */
@media only screen and (min-width: 768px) and (max-width: 820px) and (orientation: portrait) {
  .top-section {
    height: 500px;
  }

  .mobile-hamburger-icons .mobile-icon img {
    width: 47px;
    height: 47px;
  }

  .mobile-hamburger-icons {
    gap: 58px;
  }

  .text-left {
    left: 80px;
    font-size: 28px;
    line-height: 42px;
    max-width: 370px;
  }

  .flower-container {
    width: 350px;
    height: 75vh;
  }

  .card-slider-container {
    max-width: 700x;
    height: 120px;
  }

  .text-section p {
    font-size: 15px;
    line-height: 24px;
  }

  .view-more {
    width: 180px;
    height: 36px;
    font-size: 14px;
  }

  .play-icon {
    font-size: 24px;
  }

  .service-flower-block {
    padding: 40px;
  }

  .service-button-detail a {
    width: 70%;
  }

  .about-block .about-text p {
    width: 60%;
    display: flex;
    align-items: center;
    justify-content: center;
    justify-items: center;
    margin: 30px auto;
  }

  .video-block-mobile {
    display: flex;
    justify-content: center;
    flex-direction: row;
    width: 80%;
    margin: 0 auto;
  }
}
/* ... */

